--- a/cotizador_acerta/templates/polizas/solicitud.html
+++ b/cotizador_acerta/templates/polizas/solicitud.html
@@ -1097,6 +1097,11 @@
         });
         $( '#id_ingreso_principal' ).prepend('<option class="placeholder" value="" selected=selected disabled>Ingreso Anual</option>');
         $( '#id_otro_ingreso' ).prepend('<option class="placeholder" value="" selected=selected disabled>Ingreso Anual</option>');
+        $( '#id_ilicito' ).prepend('<option class="placeholder" value="" selected=selected disabled>----</option>');
+        $( '#id_politico_expuesto' ).prepend('<option class="placeholder" value="" selected=selected disabled>----</option>');
+        $( '#id_declaracion_prima' ).prepend('<option class="placeholder" value="" selected=selected disabled>----</option>');
+        $( '#id_acreedor_leasing_id' ).prepend('<option class="placeholder" value="" selected=selected disabled>----</option>');
+
         // $( '#id_tipo_produccion' ).prepend('<option class="placeholder" value="" selected=selected disabled>Tipo de Produccion</option>');
         // $( '#id_tipo_suscripcion' ).prepend('<option class="placeholder" value="" selected=selected disabled>Tipo de Suscripcion</option>');
         // $( '#id_forma_facturacion' ).prepend('<option class="placeholder" value="" selected=selected disabled>Forma de facturacion</option>');
