--- a/cotizador_acerta/templates/polizas/solicitud.html
+++ b/cotizador_acerta/templates/polizas/solicitud.html
@@ -436,9 +436,7 @@
                                             <label>Acreedor o Leasing</label>
                                         </div>
                                         <div class="col-md-12">
-                                            <div class="col-md-6">
-                                                {% bootstrap_field form.acreedor_leasing_id layout='horizontal' show_label=False field_class='form-field' %}
-                                            </div>
+                                                {% bootstrap_field form.acreedor_leasing layout='horizontal' show_label=False field_class='form-field' %}
                                         </div>
                                     </div>
                                 </fieldset>
