Arreglado problema datos juridicos y quitado dd/mm/aaa de fecha nacimiento

--- a/cotizador_acerta/templates/polizas/pdf_personaNatural.html
+++ b/cotizador_acerta/templates/polizas/pdf_personaNatural.html
@@ -55,7 +55,7 @@
 							<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;D.V. </span><span></span>
 						</p>
 						<p style="padding-bottom: -6px;">
-							<span>Fecha de nacimiento: </span>{{conductor1.fecha_nacimiento}}<span></span><span>(dd/mm/aaaa)</span>
+							<span>Fecha de nacimiento: </span>{{conductor1.fecha_nacimiento}}<span></span><span></span>
 							<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;País de Nacimiento: </span><span>{{conductor2.pais_nacimiento}}</span>
 							<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Género: </span><span>{{conductor1.sexo}}</span>
 						</p>
@@ -902,16 +902,16 @@
 										{% endif %}
 								</tr>
 								<tr style="border: 2px solid #999; padding-top: 2px; padding-bottom: -1px;">
-									<td colspan="2"><span>RUC:</span>&nbsp;<span>{{conductor2.RUC}}</span> </td>
+									<td colspan="2"><span>RUC:</span>&nbsp;<span>{{conductor2.juridico_RUC}}</span> </td>
 								</tr>
 								<tr style="border: 2px solid #999; padding-top: 2px; padding-bottom: -1px;">
-									<td colspan="2"><span>Razón Social:</span>&nbsp;<span>{{conductor2.razon_social}}</span> </td>
+									<td colspan="2"><span>Razón Social:</span>&nbsp;<span>{{conductor2.juridico_razon_social}}</span> </td>
 								</tr>
 								<tr style="border: 2px solid #999; padding-top: 2px; padding-bottom: -1px;">
-									<td colspan="2"><span>País de procedencia:</span>&nbsp;<span>{{conductor2.pais_procedencia}}</span> </td>
+									<td colspan="2"><span>País de procedencia:</span>&nbsp;<span>{{conductor2.juridico_pais_procedencia}}</span> </td>
 								</tr>
 								<tr style="border: 2px solid #999; padding-top: 2px; padding-bottom: -1px;">
-									<td colspan="2"><span>Fecha de constitución:</span>&nbsp;<span>{{conductor2.fecha_constitucion}}</span> </td>
+									<td colspan="2"><span>Fecha de constitución:</span>&nbsp;<span>{{conductor2.juridico_fecha_constitucion}}</span> </td>
 								</tr>
 							</table>
 						</p>
