--- a/cotizador_acerta/templates/polizas/solicitud.html
+++ b/cotizador_acerta/templates/polizas/solicitud.html
@@ -581,7 +581,7 @@
                                                 {% bootstrap_field form.chasis layout='horizontal' show_label=False field_class='form-field' %}
                                             </div>
                                             <div class="col-md-4">
-                                                {% bootstrap_field form.tipo layout='horizontal' show_label=False field_class='form-field' %}
+                                                {% bootstrap_field form.tipo_vehiculo layout='horizontal' show_label=False field_class='form-field' %}
                                             </div>
                                         </div>
                                         <div class="col-md-12">
