Datepicker en fecha constitucion juridico

--- a/cotizador_acerta/templates/polizas/solicitud.html
+++ b/cotizador_acerta/templates/polizas/solicitud.html
@@ -187,7 +187,7 @@
                                                 {% bootstrap_field form.juridico_pais_procedencia layout='horizontal' show_label=False field_class='form-field' %}
                                             </div>
                                             <div class="col-md-3 j_fc" hidden="True">
-                                                {% bootstrap_field form.juridico_fecha_constitucion layout='horizontal' show_label=False field_class='form-field' %}
+                                                {% bootstrap_field form.juridico_f_constitucion layout='horizontal' show_label=False field_class='form-field' %}
                                             </div>
                                         </div>
                                         <div class="col-md-12">
@@ -850,6 +850,13 @@
     //     }
     // });
 
+    $('#id_juridico_f_constitucion').datepicker({
+            format:'dd-mm-yyyy',
+            language: 'es',
+            todayHighlight: true,
+            autoclose: true,
+        });
+
     $("#id_es_juridico").on("change", function(event) {
         if( $(this).is(':checked') ){
             $(".j_RUC").show();
@@ -859,7 +866,7 @@
             $("#id_juridico_RUC").attr('required',true);
             $("#id_juridico_razon_social").attr('required',true);
             $("#id_juridico_pais_procedencia").attr('required',true);
-            $("#id_juridico_fecha_constitucion").attr('required',true);
+            $("#id_juridico_f_constitucion").attr('required',true);
         }
         else{
             $(".j_RUC").hide();
@@ -869,7 +876,7 @@
             $("#id_juridico_RUC").attr('required',false);
             $("#id_juridico_razon_social").attr('required',false);
             $("#id_juridico_pais_procedencia").attr('required',false);
-            $("#id_juridico_fecha_constitucion").attr('required',false);
+            $("#id_juridico_f_constitucion").attr('required',false);
         }
     });
 
@@ -972,6 +979,37 @@
     //         element.classList.remove("hidden");
     //     }
     // } );
+
+    $("#id_nombre_conductor2").on("change", function(event) {
+        if ($(this).val() == ''){
+            $('#id_tipo_id_conductor2').prop('required',false);
+            $('#id_provincia_2').prop('required',false);
+            $('#id_campo_id_1_2').prop('required',false);
+            $('#id_campo_id_2_2').prop('required',false);
+        }
+        else{
+            $('#id_tipo_id_conductor2').prop('required',true);
+            $('#id_provincia_2').prop('required',true);
+            $('#id_campo_id_1_2').prop('required',true);
+            $('#id_campo_id_2_2').prop('required',true);
+        }
+    });
+
+    $("#id_nombre_conductor3").on("change", function(event) {
+        if ($(this).val() == ''){
+            $('#id_tipo_id_conductor3').prop('required',false);
+            $('#id_provincia_3').prop('required',false);
+            $('#id_campo_id_1_3').prop('required',false);
+            $('#id_campo_id_2_3').prop('required',false);
+        }
+        else{
+            $('#id_tipo_id_conductor3').prop('required',true);
+            $('#id_provincia_3').prop('required',true);
+            $('#id_campo_id_1_3').prop('required',true);
+            $('#id_campo_id_2_3').prop('required',true);
+        }
+    });
+
     $("#id_declaracion_prima").on("change", function(event) {
         var select = ($("#id_politico_expuesto").val()=="Si");
         var select2 = ($("#id_declaracion_prima").val()=="Si");
