Cambio para que aparezca fecha constitucion juridico

--- a/cotizador_acerta/templates/polizas/pdf_personaNatural.html
+++ b/cotizador_acerta/templates/polizas/pdf_personaNatural.html
@@ -911,7 +911,7 @@
 									<td colspan="2"><span>País de procedencia:</span>&nbsp;<span>{{conductor2.juridico_pais_procedencia}}</span> </td>
 								</tr>
 								<tr style="border: 2px solid #999; padding-top: 2px; padding-bottom: -1px;">
-									<td colspan="2"><span>Fecha de constitución:</span>&nbsp;<span>{{conductor2.juridico_fecha_constitucion}}</span> </td>
+									<td colspan="2"><span>Fecha de constitución:</span>&nbsp;<span>{{conductor2.juridico_f_constitucion}}</span> </td>
 								</tr>
 							</table>
 						</p>
