No entiendo por que desaparecia tipoid -.-

--- a/cotizador_acerta/templates/polizas/solicitud.html
+++ b/cotizador_acerta/templates/polizas/solicitud.html
@@ -1148,7 +1148,7 @@
     var element = document.querySelector("#id_responsable_0");
     element.onclick = function () {
         var element = document.querySelector("#id_tipo_id_responsable");
-        element.classList.add("hidden");
+        element.classList.remove("hidden");
         var val1 = $("#nombre-conductor").val();
         var val2 = $("#id-conductor").val();
         $("#id_nombre_responsable").val(val1);
@@ -1157,7 +1157,7 @@
     var element = document.querySelector("#id_responsable_1");
     element.onclick = function () {
         var element = document.querySelector("#id_tipo_id_responsable");
-        element.classList.add("hidden");
+        element.classList.remove("hidden");
         var val1 = $("#nombre-conductor").val();
         var val2 = $("#id-conductor").val();
         $("#id_nombre_responsable").val(val1);
