Arreglado detalle con datepicker en datos juridicos

--- a/cotizador_acerta/templates/polizas/solicitud.html
+++ b/cotizador_acerta/templates/polizas/solicitud.html
@@ -850,6 +850,7 @@
     //     }
     // });
 
+    $('#id_juridico_fecha_constitucion').mask('00-00-0000', {placeholder: "F. Nacimiento (dd-mm-aaaa)"});
     $('#id_juridico_fecha_constitucion').datepicker({
             format:'dd-mm-yyyy',
             language: 'es',
