PDF pólizas: Eliminado campo de Factura.

--- a/cotizador_acerta/templates/polizas/emision_acreedor_asegurado_pdf.html
+++ b/cotizador_acerta/templates/polizas/emision_acreedor_asegurado_pdf.html
@@ -78,8 +78,7 @@
 <br>
 <table height="100000%" style="position: absolute; top: 0; bottom: 0; left: 0; right: 0;">
   <tr>
-    <td><b>PÓLIZA:</b> {{solicitud.num}}</td>
-    <td><b>FACTURA:</b></td>
+    <td colspan="2"><b>PÓLIZA:</b></td>
     <td colspan="2"><b>AGENCIA:</b></td> 
     <td colspan="3"><b>FECHA:</b> {{ fecha }}</td>
   </tr>
@@ -286,8 +285,7 @@
 <br>
 <table height="100000%" style="position: absolute; top: 0; bottom: 0; left: 0; right: 0;">
   <tr>
-    <td><b>PÓLIZA:</b></td>
-    <td><b>FACTURA:</b></td>
+    <td colspan="2"><b>PÓLIZA:</b></td>
     <td colspan="2"><b>AGENCIA:</b></td> 
     <td colspan="3"><b>FECHA:</b> {{ fecha }}</td>
   </tr>
