PDF pólizas: Campo Agencia siempre dice web.

--- a/cotizador_acerta/templates/polizas/emision_todas_pdf.html
+++ b/cotizador_acerta/templates/polizas/emision_todas_pdf.html
@@ -88,7 +88,7 @@
 <table height="100000%" style="position: absolute; top: 0; bottom: 0; left: 0; right: 0;">
   <tr>
     <td  colspan="2"><b>PÓLIZA:</b> {{solicitud.num}}</td>
-    <td colspan="2"><b>AGENCIA:</b></td> 
+    <td colspan="2"><b>AGENCIA:</b> WEB</td> 
     <td colspan="3"><b>FECHA:</b> {{ fecha }}</td>
   </tr>
   <tr>
@@ -295,7 +295,7 @@
 <table height="100000%" style="position: absolute; top: 0; bottom: 0; left: 0; right: 0;">
   <tr>
     <td colspan="2"><b>PÓLIZA:</b></td>
-    <td colspan="2"><b>AGENCIA:</b></td> 
+    <td colspan="2"><b>AGENCIA:</b>WEB</td> 
     <td colspan="3"><b>FECHA:</b> {{ fecha }}</td>
   </tr>
   <tr>
@@ -497,7 +497,7 @@
 <table height="100000%" style="position: absolute; top: 0; bottom: 0; left: 0; right: 0;">
   <tr>
     <td colspan="2"><b>PÓLIZA:</b></td>
-    <td colspan="2"><b>AGENCIA:</b></td> 
+    <td colspan="2"><b>AGENCIA:</b>WEB</td> 
     <td colspan="3"><b>FECHA:</b> {{ fecha }}</td>
   </tr>
   <tr>
