--- a/cotizador_acerta/templates/polizas/emision_intermediario_pdf.html
+++ b/cotizador_acerta/templates/polizas/emision_intermediario_pdf.html
@@ -69,7 +69,7 @@
       polifact<br>
       {{ etiqueta_corredor }}<br>
       Fecha de impresión<br>
-      <font size="2">{{ fecha }}</font><br>
+      <font size="2">{{ fecha.day }}/{{ fecha.month }}/{{ fecha.year }} {{fecha.time}}</font><br>
       <b>EMISIÓN</b>
     </td>
     </tr>
@@ -79,7 +79,7 @@
   <tr>
     <td colspan="2"><b>PÓLIZA:</b></td>
     <td colspan="2"><b>AGENCIA:</b>WEB</td> 
-    <td colspan="3"><b>FECHA:</b> {{ fecha }}</td>
+    <td colspan="3"><b>FECHA:</b> {{ fecha.day }}/{{ fecha.month }}/{{ fecha.year }} </td>
   </tr>
   <tr>
     {% if extra_cliente.es_juridico %}
