PDF pólizas: Campo Moneda siempre dice Balboa. Arreglados campos de fecha 'desde' y 'hasta'.

--- a/cotizador_acerta/templates/polizas/emision_acreedor_asegurado_pdf.html
+++ b/cotizador_acerta/templates/polizas/emision_acreedor_asegurado_pdf.html
@@ -100,11 +100,11 @@
   </tr>
   <tr>
     <td colspan="4"><b>INFORMACIÓN DE CONTACTO DEL CONTRATANTE:</b></td>
-    <td colspan="3" rowspan="1"><font size="2"><div align="right">AL MEDIODÍA HORA OFICIAL (dd/mm/aaaa)</div></font> <b>VIGENCIA DESDE(*)</b>  {{ solicitud.vigencia_desde }} <b> HASTA(*)</b> {{ solicitud.vigencia_hasta }}</td>
+    <td colspan="3" rowspan="1"><font size="2"><div align="right">AL MEDIODÍA HORA OFICIAL (dd/mm/aaaa)</div></font> <b>VIGENCIA DESDE(*)</b>  {{ solicitud.vigencia_desde.day }}/{{ solicitud.vigencia_desde.month }}/{{ solicitud.vigencia_desde.year }} <b> &nbsp;&nbsp;HASTA(*)</b> {{ solicitud.vigencia_hasta.day }}/{{ solicitud.vigencia_hasta.month }}/{{ solicitud.vigencia_hasta.year }}</td>
   </tr> 
   <tr>
     <td colspan="4" style="border-top: 1px white;"><b>DIRECCIÓN DE COBRO:</b> {{ extra_cliente.provincia }} {{ extra_cliente.distrito }} {{ extra_cliente.corregimiento }} {{ extra_cliente.urbanizacion }} {{ extra_cliente.edificio }} {{ extra_cliente.piso }} {{ extra_cliente.apto }} {{ extra_cliente.calle_ave }} {{ extra_cliente.no_casa }} </td>
-    <td colspan="3" style="border-top: 1px white;"><b>MONEDA</b></td>
+    <td colspan="3" style="border-top: 1px white;"><b>MONEDA: BALBOA</b></td>
   </tr>
   <tr>
     <td colspan="4" style="border-top: 1px white;"><b>DIRECCIÓN PRINCIPAL:</b> {{ extra_cliente.provincia }} {{ extra_cliente.distrito }} {{ extra_cliente.corregimiento }} {{ extra_cliente.urbanizacion }} {{ extra_cliente.edificio }} {{ extra_cliente.piso }} {{ extra_cliente.apto }} {{ extra_cliente.calle_ave }} {{ extra_cliente.no_casa }} </td>
@@ -307,11 +307,11 @@
   </tr>
   <tr>
     <td colspan="4"><b>INFORMACIÓN DE CONTACTO DEL CONTRATANTE:</b></td>
-    <td colspan="3" rowspan="1"><font size="2"><div align="right">AL MEDIODÍA HORA OFICIAL (dd/mm/aaaa)</div></font> <b>VIGENCIA DESDE(*)</b>  {{ solicitud.vigencia_desde }} <b> HASTA(*)</b> {{ solicitud.vigencia_hasta }}</td>
+    <td colspan="3" rowspan="1"><font size="2"><div align="right">AL MEDIODÍA HORA OFICIAL (dd/mm/aaaa)</div></font> <b>VIGENCIA DESDE(*)</b>  {{ solicitud.vigencia_desde.day }}/{{ solicitud.vigencia_desde.month }}/{{ solicitud.vigencia_desde.year }} <b> &nbsp;&nbsp;HASTA(*)</b> {{ solicitud.vigencia_hasta.day }}/{{ solicitud.vigencia_hasta.month }}/{{ solicitud.vigencia_hasta.year }}</td>
   </tr> 
   <tr>
     <td colspan="4" style="border-top: 1px white;"><b>DIRECCIÓN DE COBRO:</b> {{ extra_cliente.provincia }} {{ extra_cliente.distrito }} {{ extra_cliente.corregimiento }} {{ extra_cliente.urbanizacion }} {{ extra_cliente.edificio }} {{ extra_cliente.piso }} {{ extra_cliente.apto }} {{ extra_cliente.calle_ave }} {{ extra_cliente.no_casa }} </td>
-    <td colspan="3" style="border-top: 1px white;"><b>MONEDA</b></td>
+    <td colspan="3" style="border-top: 1px white;"><b>MONEDA: BALBOA</b></td>
   </tr>
   <tr>
     <td colspan="4" style="border-top: 1px white;"><b>DIRECCIÓN PRINCIPAL:</b> {{ extra_cliente.provincia }} {{ extra_cliente.distrito }} {{ extra_cliente.corregimiento }} {{ extra_cliente.urbanizacion }} {{ extra_cliente.edificio }} {{ extra_cliente.piso }} {{ extra_cliente.apto }} {{ extra_cliente.calle_ave }} {{ extra_cliente.no_casa }} </td>
