PDF pólizas. Frecuencia de facturación siempre es anual.

--- a/cotizador_acerta/templates/polizas/emision_todas_pdf.html
+++ b/cotizador_acerta/templates/polizas/emision_todas_pdf.html
@@ -117,7 +117,7 @@
   </tr>
   <tr>
     <td colspan="4" style="border-top: 1px white;"><b>DIRECCIÓN PRINCIPAL:</b> {{ extra_cliente.provincia }} {{ extra_cliente.distrito }} {{ extra_cliente.corregimiento }} {{ extra_cliente.urbanizacion }} {{ extra_cliente.edificio }} {{ extra_cliente.piso }} {{ extra_cliente.apto }} {{ extra_cliente.calle_ave }} {{ extra_cliente.no_casa }} </td>
-    <td colspan="3"><b>FRECUENCIA DE FACTURACIÓN</b></td>
+    <td colspan="3"><b>FRECUENCIA DE FACTURACIÓN:</b> ANUAL</td>
   </tr>
   <tr>
     <td colspan="4" style="border-top: 1px white;"><b>EMAIL:</b> {{ conductor.correo }}</td>
@@ -324,7 +324,7 @@
   </tr>
   <tr>
     <td colspan="4" style="border-top: 1px white;"><b>DIRECCIÓN PRINCIPAL:</b> {{ extra_cliente.provincia }} {{ extra_cliente.distrito }} {{ extra_cliente.corregimiento }} {{ extra_cliente.urbanizacion }} {{ extra_cliente.edificio }} {{ extra_cliente.piso }} {{ extra_cliente.apto }} {{ extra_cliente.calle_ave }} {{ extra_cliente.no_casa }} </td>
-    <td colspan="3"><b>FRECUENCIA DE FACTURACIÓN</b></td>
+    <td colspan="3"><b>FRECUENCIA DE FACTURACIÓN:</b> ANUAL</td>
   </tr>
   <tr>
     <td colspan="4" style="border-top: 1px white;"><b>EMAIL:</b> {{ conductor.correo }}</td>
@@ -526,7 +526,7 @@
   </tr>
   <tr>
     <td colspan="4" style="border-top: 1px white;"><b>DIRECCIÓN PRINCIPAL:</b> {{ extra_cliente.provincia }} {{ extra_cliente.distrito }} {{ extra_cliente.corregimiento }} {{ extra_cliente.urbanizacion }} {{ extra_cliente.edificio }} {{ extra_cliente.piso }} {{ extra_cliente.apto }} {{ extra_cliente.calle_ave }} {{ extra_cliente.no_casa }} </td>
-    <td colspan="3"><b>FRECUENCIA DE FACTURACIÓN</b></td>
+    <td colspan="3"><b>FRECUENCIA DE FACTURACIÓN:</b> ANUAL</td>
   </tr>
   <tr>
     <td colspan="4" style="border-top: 1px white;"><b>EMAIL:</b> {{ conductor.correo }}</td>
